# IPPAN-bots

./: .gitignore  Cargo.toml  IMPLEMENTATION.md  LICENSE  README.md  rust-toolchain.toml
.github/workflows/: ci.yml
config/: canary.toml  example.cluster.toml  example.deventer.toml  example.eu.full.toml  example.eu.short.toml  example.local.toml  test.toml
crates/bots-core/: Cargo.toml
crates/bots-core/src/: config.rs  lib.rs  ramp.rs  rate_limiter.rs  stats.rs  submitter.rs
crates/controller/: Cargo.toml
crates/controller/src/: main.rs
crates/keygen/: Cargo.toml
crates/keygen/src/: main.rs
crates/preflight/: Cargo.toml
crates/preflight/src/: main.rs
crates/prefund/: Cargo.toml
crates/prefund/src/: main.rs
crates/worker/: Cargo.toml
crates/worker/src/: main.rs
scripts/: run_cluster_ssh.sh  run_local.sh  run_local_controller.sh
