[workspace]
members = [
    "crates/bots-core",
    "crates/worker",
    "crates/controller",
    "crates/keygen",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.42", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["json"] }
rand = "0.8"
chrono = { version = "0.4.31", default-features = false, features = ["clock", "std", "serde"] }
